# typst-shapemaker

./: .gitignore  Cargo.toml  README.md  justfile  lib.typ  typst.toml  typst_shapemaker.wasm
colorschemes/: palenight.json  snazzy-light.json
shapemaker/: Cargo.toml
shapemaker/src/: canvas.rs  color.rs  color_mapping.rs  getrandom_custom.rs  lib.rs  shape.rs
src/: lib.rs  main.rs
