[package]
name = "typst-shapemaker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic

[dependencies]
wasm-minimal-protocol = "0.1.0"
ciborium = "0.2.1"
serde = "1.0"
shapemaker = { version = "*", path = "shapemaker" }
